2008-07-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_chain_peer),
	(gst_ogg_demux_perform_seek), (gst_ogg_demux_handle_page):
	Don't use GST_CLOCK_TIME_NONE as start of NEWSEGMENT events.
	This fixes a critical warning.

2008-07-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/ogg/gstoggmux.c:
	Allow muxing of CELT into Ogg streams.

2008-07-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/typefind/gsttypefindfunctions.c: (celt_type_find),
	(plugin_init):
	Add simple typefinder for the CELT codec (www.celt-codec.org).

2008-07-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Jan Gerber <j at oil21 dot org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_parse_skeleton_fisbone):
	Fix calculation of the start time from skeleton streams.
	Fixes bug #530068.

2008-07-24  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/seek/seek.c:
	  Use 64 bit constant GST_CLOCK_TIME_NONE instead of plain -1.

2008-07-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/audioconvert/audioconvert.h:
	* gst/audioconvert/gstaudioquantize.c:
	(gst_audio_quantize_setup_dither),
	(gst_audio_quantize_free_dither):
	* gst/audioconvert/gstfastrandom.h:
	Implement a linear congruential generator as pseudo random number
	generator for the dither noise. This is about 2 times faster than
	using GLib's mersenne twister. Also this uses only integer math for
	generating integers while GLib internally uses floating point math.

2008-07-23  Michael Smith <msmith@songbirdnest.com>

	* configure.ac:
	  Remove AC_ISC_POSIX; it breaks on some systems and is not needed.

2008-07-23  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Damien Lespiau  <damien.lespiau gmail com>

	* gst-libs/gst/sdp/gstsdpmessage.c: (print_media):
	  Use GST_STR_NULL to avoid crashes with libcs that don't
	  like NULL strings in printf args (such as the win32 one).
	  Fixes #544306.
